# ecsmon

./: Cargo.toml  flake.nix
src/: main.rs
src/components/: mod.rs  physics.rs  simulation.rs
src/plugins/: mod.rs
src/plugins/auto_end_simulation/: mod.rs
src/plugins/default/: plugin.rs
src/plugins/display/: plugin.rs  resources.rs  systems.rs
src/plugins/flow_field_pathfinding/: components.rs  configuration.rs  mod.rs  models.rs  plugin.rs  resources.rs  systems.rs
src/plugins/kinematics/: plugin.rs  systems.rs
src/plugins/movement_tracking/: components.rs  configuration.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/plugins/simple_objective/: mod.rs  plugin.rs  systems.rs
src/plugins/simulation_area/: plugin.rs  resources.rs  systems.rs
src/plugins/social_foces_model/: components.rs  configuration.rs  mod.rs  plugin.rs  system.rs
src/plugins/spawner/: components.rs  plugin.rs  systems.rs
src/plugins/start_time/: mod.rs
src/resources/: configuration.rs
src/scenarios/: example.rs
