[package]
name = "ecsmos-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy-fps-counter = "0.7.0"
bevy-inspector-egui = "0.32.0"
bevy_pancam = "0.18.0"
bevy_prototype_lyon = { git = "https://github.com/rparrett/bevy_prototype_lyon", branch = "fix-dynamic-examples" }
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["full"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

